--- a/README.org
+++ b/README.org
@@ -1,43 +1,57 @@
-#+title: Henrique's useful C project template
+#+title: ==ccompiler==
 #+author: Henrique Silva
+#+author: Bernardo Hummes
 #+email: hcpsilva@inf.ufrgs.br
 #+infojs_opt:
 #+property: cache yes
 
-Hello friend, and welcome to my C project template. It's like the C++ one, but
-in C! Who would've guessed, right?
-
-I've created this repo mainly to keep my awesome =Makefile= somewhere when I
-finally put the C++ version of my template thingy on CMake. So, enjoy.
+Hi! In this repository you'll find the final assignment of INF01147: a
+compiler implemented in the C language using =flex=, =bison= and other
+friends.
 
 ** Table of contents                                                 :TOC_3:
+  - [[#planning][Planning]]
   - [[#project-structure][Project structure]]
   - [[#build][Build]]
-  - [[#dependency-management][Dependency management]]
   - [[#contact][Contact]]
+
+** Planning
+
+The project will span through the following stages:
+
+| Stage | Description          |
+|-------+----------------------|
+| =E1=    | Lexical Analysis     |
+| =E2=    | Syntax Analysis      |
+| =E3=    | Abstract Syntax Tree |
+| =E4=    | Semantic Analysis    |
+| =E5=    | Code Generation      |
+| =E6=    | Execution Support    |
+| =E7=    | Optimization         |
+
+At the end of each stage, we will update the repository with a tag
+containing the stage code. This way you can track the release schedule
+through this semester.
 
 ** Project structure
 
-I've structured the template according to the following directories:
+We've structured the template according to the following directories:
 
-- src/ :: The sources directory. Here lies all ~.c~ files and its private
-          headers, organized inside this folder in sub-folders if the
-          source-code belongs to a module or namespace. If the file rests in the
-          root of this directory its considered a ~main~ file, which will be
-          compiled as one of the target executables.
+- src/ :: The sources directory. Here lies all ~.c~ files, organized
+  inside this folder in sub-folders if the source-code belongs to a
+  module or namespace. If the file rests in the root of this directory
+  its considered a ~main~ file, which will be compiled as one of the
+  target executables.
 
-- include/ :: The public headers directory. This is for later external project
-              use, as shown by the folder with the same name as the project.
+- include/ :: The headers directory, analogue to the sources directory.
 
 - bin/ :: The ~.o~ directory. Here will be dumped all compiled objects.
 
-- build/ :: The executables directory. Here is the final resting place of the
-            project targets.
+- build/ :: The executables directory. Here is the final resting place
+  of the project targets.
 
-- lib/ :: The ~.a~ directory. Dump here any static library you may be using.
-
-- scripts/ :: The ~.sh~ directory. Any script that needs to be used during the
-              compiling or dependency handling or whatever should stay here.
+- scripts/ :: The ~.sh~ directory. Any script that needs to be used during
+  the compiling or dependency handling or whatever should stay here.
 
 ** Build
 
@@ -70,80 +84,39 @@ lscpu
 cat /proc/cpuinfo
 #+end_src
 
-Also, here's an example of all the rules you can target (and, therefore, call my
+Also, here's an example of all the rules you can target (and, therefore, call this
 Makefile with):
 
-#+begin_src makefile
-.DEFAULT_GOAL = all
-
-all: deps $(TARGET)
-
-clean:
-    rm -f $(OBJ_DIR)/*.o $(INC_DIR)/*~ $(TARGET) *~ *.o
-
-redo: clean all
-
-help:
-    @echo "c-template's project Makefile."
-    @echo
-    @echo "Utilization example:"
-    @echo " make <TARGET> ['DEBUG=true']"
-    @echo
-    @echo "@param TARGET"
-    @echo " Can be any of the following:"
-    @echo " all - builds the project (DEFAULT TARGET)"
-    @echo " clean - cleans up all binaries generated during compilation"
-    @echo " redo - cleans up and then builds"
-    @echo " help - shows the utilization example"
-    @echo
-    @echo "@param 'DEBUG=true'"
-    @echo " When present, the build will happen in debug mode."
+#+begin_src bash :exports results :results output
+make help
 #+end_src
 
-** Dependency management
+#+RESULTS:
+#+begin_example
+ccompiler's project Makefile.
 
-I currently handle this stuff inserting manually into the ~Makefile~ a line
-defining URLs to the headers (yes, headers! I don't know how to support any
-bigger-than-an-one-file dependency), which then gets evaluated by the
-~scripts/build.sh~ script, that curls them and adds them to the ~include~
-folder.
+Utilization example:
+ make <TARGET> ['DEBUG=true']
 
-Here is the script by the way:
+@param TARGET
+ Can be any of the following:
+ all - builds the project (DEFAULT TARGET)
+ clean - cleans up all binaries generated during compilation
+ redo - cleans up and then builds
+ help - shows the utilization example
+ test - builds and run tests
+ tool - generates compile_commands.json
+ release - builds and compresses the work directory for release
 
-#+begin_src shell
-cd include
-
-for par in "$@"; do
-    dep=($par)
-
-    name=${dep[0]}
-    dir="$name"
-    target=("${dep[@]:1}")
-
-    if [ ! -d $dir ]; then
-        echo "=> Dependency '$name' not found!"
-        mkdir $dir
-        cd $dir
-
-        for url in "${target[@]}"; do
-            echo "==> Downloading $(basename $url)..."
-            curl -O -L $url
-            echo
-        done
-
-        echo "=> Finished downloading '$name'!"
-        echo
-        cd ..
-    fi
-done
-
-cd ..
-#+end_src
+@param 'DEBUG=true'
+ When present, the build will happen in debug mode.
+#+end_example
 
 ** Contact
 
-You can contact me at:
+You can contact either of us through the following e-mail addresses:
 
 #+begin_example
 hcpsilva@inf.ufrgs.br
+bhflores@inf.ufrgs.br
 #+end_example
