added new .gitignore rules

--- a/README.org
+++ b/README.org
@@ -106,7 +106,7 @@ Utilization example:
  help - shows the utilization example
  test - builds and run tests
  tool - generates compile_commands.json
- release - builds and compresses the work directory for release
+ release - cleans and compresses the work directory for release
 
 @param 'DEBUG=true'
  When present, the build will happen in debug mode.
