--- a/doc/etapa4.org
+++ b/doc/etapa4.org
@@ -9,6 +9,7 @@
 #+latex_class_options: [twocolumn, a4paper]
 
 #+latex_header: \usepackage[margin=1in]{geometry}
+#+latex_header: \usepackage[brazil]{babel}
 #+latex_header: \usepackage{authblk}
 #+latex_header: \usepackage{titling}
 #+latex_header: \usepackage{palatino}
@@ -20,7 +21,6 @@
 #+latex_header: \author{Henrique Corrêa Pereira da Silva}
 #+latex_header: \affil[]{Instituto de Informática\\Universidade Federal do Rio Grande do Sul}
 #+latex_header: \affil[]{\normalsize\texttt{hcpsilva@inf.ufrgs.br}}
-#+latex_header: \lstset{basicstyle=\tiny}
 #+latex_header: \setminted{fontsize=\tiny}
 
 #+begin_abstract
@@ -96,3 +96,42 @@ trabalho  dessa maneira.  Entrego  essa  etapa feita  com  toda a  minha
 dedicação e trabalharei na próxima só após de ver as aulas e de realizar
 minhas  outras  tarefas  extracurriculares,  e,  nesse  esquema,  espero
 atingir nota o suficiente para um desempenho aceitável na disciplina.
+
+Finalizando o  documento, deixo  a saída do  programa =sloccount=  sobre o
+código fonte que  desenvolvi. Talvez sirva propósito  para considerar as
+opções que cito no início dessa sessão.
+
+#+begin_export latex
+\begin{Verbatim}[fontsize=\tiny]
+Creating filelist for src
+Creating filelist for include
+Categorizing files.
+Finding a working MD5 command....
+Found a working MD5 command.
+Computing results.
+SLOC Directory SLOC-by-Language (Sorted)
+1795    src             ansic=901,yacc=475,lex=419
+547     include         ansic=547
+
+Totals grouped by language (dominant language first):
+ansic:         1448 (61.83%)
+yacc:           475 (20.28%)
+lex:            419 (17.89%)
+
+Total Physical Source Lines of Code (SLOC)                = 2,342
+Development Effort Estimate, Person-Years (Person-Months) = 0.49 (5.87)
+ (Basic COCOMO model, Person-Months = 2.4 * (KSLOC**1.05))
+Schedule Estimate, Years (Months)                         = 0.41 (4.90)
+ (Basic COCOMO model, Months = 2.5 * (person-months**0.38))
+Estimated Average Number of Developers (Effort/Schedule)  = 1.20
+Total Estimated Cost to Develop                           = $ 66,025
+ (average salary = $56,286/year, overhead = 2.40).
+
+SLOCCount, Copyright (C) 2001-2004 David A. Wheeler
+SLOCCount is Open Source Software/Free Software, licensed under the GNU GPL.
+SLOCCount comes with ABSOLUTELY NO WARRANTY, and you are welcome to
+redistribute it under certain conditions as specified by the GNU GPL license;
+see the documentation for details.
+Please credit this data as "generated using David A. Wheeler's 'SLOCCount'."
+\end{Verbatim}
+#+end_export
